# pylatexenc

./: .gitignore  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  gen_xml_dic.py  latex2text.py  latexencode.py  latexwalker.py  pyproject.toml  setup.py  unicode.xml.LICENSE
.github/workflows/: codeql.yml  deploy-pypi.yml  tests-ci-js.yml  tests-ci.yml
doc/: Makefile  changes.rst  conf.py  example_latex2text_custom_quotes.py  index.rst  latex2text.rst  latexencode.rst  latexnodes.nodes.rst  latexnodes.parsers.rst  latexnodes.rst  latexwalker.rst  macrospec.rst  new-in-pylatexenc-2.rst  new-in-pylatexenc-3.rst
doc/_static/: custom.css
js-transcrypt/: .gitignore  README.md  generate_pylatexenc_js.py  import_pylatexenc_modules.py  my_test_script.py  package.json  preprocesslib-pylatexenc.config.yaml  preprocesslib-tests.config.yaml  preprocesslib.config.yaml  preprocesslib_tests.config.yaml  runtests.py  transcrypt_runtime_patches.js
js-transcrypt/libpatches/: bisect.py  collections.py  customjspatches.js  functools.py  json.py  logging.js  logging.py  unique_object_id.js  unittest.py
pylatexenc/: __init__.py  _latex2text_defaultspecs.py  _latexwalker_defaultspecs.py  _latexwalker_defs.py  _macrospec_argparsers.py  _macrospec_defaults.py  _uni2latexmap.py  _uni2latexmap_xml.py  _utf8latexmap.py  _util.py  _util_support.py  latex2text.py  latexencode.py  latexwalker.py  macrospec.py  version.py
pylatexenc/latex2text/: __init__.py  __main__.py  _defaultspecs.py  _inputlatexfile.py
pylatexenc/latexcontentparsers/: __init__.py  _exctypes.py  _expression.py  _nodescollectorbase.py  _nodetypes.py  _parsedargsbase.py  _std.py
pylatexenc/latexencode/: __init__.py  __main__.py  _partial_latex_encoder.py  _rule.py  _uni2latexmap.py  _unicode_to_latex_encoder.py  get_builtin_rules.py
pylatexenc/latexnodes/: __init__.py  _base.py  _callablespecbase.py  _carryoverinfo.py  _exctypes.py  _expression.py  _latex_recomposer.py  _latexcontextdbbase.py  _nodescollector.py  _nodescollectorbase.py  _nodetypes.py  _parsedargs.py  _parsedargsbase.py  _parsedargsinfo.py  _parsingstate.py  _parsingstatedelta.py  _stdargparser.py  _token.py  _tokenreader.py  _tokenreaderbase.py  _verbatimparsers.py  _walkerbase.py  nodes.py
pylatexenc/latexwalker/: __init__.py  __main__.py  _defaultspecs.py  _get_defaultspecs.py  _helpers.py  _legacy_py1x.py  _parsingstate.py  _types.py  _walker.py  nodelistcollector.py  tokenreader.py
pylatexenc/macrospec/: __init__.py  _argparsers.py  _argsparser.py  _argumentsparser.py  _environmentbodyparser.py  _latexcontextdb.py  _macrocallparser.py  _parsedargs.py  _parsedargsbase.py  _specbase.py  _specclasses.py  (+1 more)
test/: .gitignore  _helpers_tests.py  test_1_latexwalker.py  test_1_macrospec.py  test_2_latex2text.py  test_2_latexwalker.py  test_2_macrospec.py  test_input_1.tex  test_latex2text.py  test_latex2text_upgreek.py  test_latexencode.py  test_latexencode_all.py  test_latexnodes_latex_recomposer.py  test_latexnodes_nodes.py  test_latexnodes_nodescollector.py  test_latexnodes_parsedargsinfo.py  test_latexnodes_parsers_delimited.py  test_latexnodes_parsers_delimitedgroup.py  test_latexnodes_parsers_expression.py  test_latexnodes_parsers_generalnodes.py  test_latexnodes_parsers_math.py  test_latexnodes_parsers_optionals.py  test_latexnodes_parsers_stdarg.py  test_latexnodes_parsers_verbatim.py  test_latexnodes_tokenreader.py  test_latexnodes_tokenreaderbase.py  test_latexwalker.py  test_macrospec.py  test_macrospec_argparsers_elaborateargs.py  test_macrospec_argumentsparser.py  test_macrospec_environmentbodyparser.py  test_macrospec_latexcontextdb.py  test_macrospec_macrocallparser.py  test_pylatexenc.py  test_util.py  uni_chars_test_previous.txt
tools/: gen_l2t_from_lenc.py  gen_xml_dic.py  make_transcryptable_lib.py  preprocess_lib.py  utils_transcrypt_generate_js.py
(+46 files in other folders)
